[package]
name = "replayd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "1.29.1", features = ["full"] }
users = "0.11.0"
ffmpeg-next = "6.0.0"
sysinfo = "0.29.4"
