[package]
name = "replayd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.6"
tokio = { version = "1.29.1", features = ["full"] }
users = "0.11.0"
ffmpeg-next = "6.0.0"
sysinfo = "0.29.4"
lazy_static = "1.4.0"
chrono = "0.4.26"
